wikijs/wikijs-db.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: wikijs-db
  labels:
    app: wikijs
spec:
  replicas: 1
  selector:
    matchLabels:
      app: wikijs
  template:
    metadata:
      labels:
        app: wikijs
    spec:
      containers:
      - name: wikijs
        image: ghcr.io/requarks/wiki:2
        ports:
          - containerPort: 3000
        resources: 
          requests: 
            memory: "256Mi"
            cpu: "250m"
          limits:
            memory: "512Mi"
            cpu: "500m"
