wikijs/postgres-svc.yaml
apiVersion: v1
kind: Service
metadata:
  name: postgres-db
spec:
  ports:
    - port: 5432
  selector:
    app: postgres
