wikijs/wikijs-svc.yaml
apiVersion: v1
kind: Service
metadata:
  name: wikijs-db
spec:
  ports:
    - port: 80
      targetPort: 3000
  selector:
    app: wikijs
