wikijs/wikijs-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: wiki-ingress
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  rules:
    - host: wiki.cloudcomp-15.ucll.cloud
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: wiki-service
                port:
                  number: 80
